objects/ASI_CRM_Application_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Parameter_Key__c</fullName>
        <label>Parameter Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reporting_Item__c</fullName>
        <label>Reporting Item</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gift(礼品）</fullName>
                </value>
                <value>
                    <fullName>Hospitality（招待）</fullName>
                </value>
                <value>
                    <fullName>Trip（旅行）</fullName>
                </value>
                <value>
                    <fullName>Cash（现金）</fullName>
                </value>
                <value>
                    <fullName>Cash Equivalents（现金等价物）</fullName>
                </value>
                <value>
                    <fullName>Caritible Donation（慈善捐赠）</fullName>
                </value>
                <value>
                    <fullName>Sponsorship/Community Project（赞助/社区项目）</fullName>
                </value>
                <value>
                    <fullName>Engagement of Lobbyists（聘请说客）</fullName>
                </value>
                <value>
                    <fullName>Trips (Not Travelling Together)（旅行（不与同行））</fullName>
                </value>
                <value>
                    <fullName>Trips (Travelling Together)（旅行（与同行））</fullName>
                </value>
                <value>
                    <fullName>Political Donation(政治捐赠）</fullName>
                </value>
                <value>
                    <fullName>Facilitation Fees（疏通费）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Type_Remarks__c</fullName>
        <label>SubType Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Threshhold__c</fullName>
        <label>Threshhold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ASI CRM Application Setup Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Parameter_Key__c</columns>
        <columns>ASI_CRM_Remarks__c</columns>
        <columns>ASI_CRM_Reporting_Item__c</columns>
        <columns>ASI_CRM_Sub_Type_Remarks__c</columns>
        <columns>ASI_CRM_Threshhold__c</columns>
        <columns>ASI_CRM_Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI CRM Application Setup Parameters</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Application_Setup_Parameter</fullName>
        <active>true</active>
        <label>CN Application Setup Parameter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>